--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
 		  <div><%= f.label :password_confirmation %><br />
 		    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %></div>
 		   <br />
-		  <div><%= f.submit "Sign up", class: 'btn btn-success' %></div>
+		  <div><%= f.submit "Sign up", class: 'btn btn-info' %></div>
 		<% end %>
 	</div>
 </div>
