--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+.rating-stars li {
+	list-style:none;
+	display: inline;
+}
+
+.star{
+	color: #EF3215;
+}
+
