--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,7 +7,7 @@
 	                <span class="icon-bar"></span>
 	                <span class="icon-bar"></span>
 	            </button>
-	            <a class="navbar-brand" href="/home">SaySo</a>
+	            <a class="navbar-brand" href="/businesses">SaySo</a>
 	        </div>
 	        <center>
 	            <div class="navbar-collapse collapse" id="navbar-main">    
@@ -26,7 +26,7 @@
 						</ul>
 	                <% else %>
 	                	<ul class="nav navbar-nav">
-		                   <li><a href="/add_buisness">Add business</a></li> 
+		                   <li><a href="/add_business">Add business</a></li> 
 		                </ul>
 	                    <ul class="nav navbar-nav pull-right">
 	                      <li><span style="position:relative;display:block;padding:10px 15px;padding-top:15px;">Hello, <b><%=current_user.name%></b></span></li>
